--- a/main_files/main.css
+++ b/main_files/main.css
@@ -7,7 +7,7 @@
 }
 
 #integration-list {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Open Sans', sans-serif;*/
     width: 80%;
     margin: 0 auto;
     display: table;
@@ -139,9 +139,9 @@ span {
 /*}*/
 
 /*.data_list:hover {*/
-    /*background: #656467;*/
-    /*opacity: 1;*/
-    /*color: white;*/
+/*background: #656467;*/
+/*opacity: 1;*/
+/*color: white;*/
 /*}*/
 
 .data_list.stripped {
@@ -150,14 +150,14 @@ span {
 
 .data_list {
     background: #dddddd;
-    color: #333333;
-    opacity: .9;
+    /*color: #333333;*/
+    /*opacity: .9;*/
 }
 
 /*.data_list.active {*/
-    /*background: #656467;*/
-    /*opacity: 1;*/
-    /*color: white;*/
+/*background: #656467;*/
+/*opacity: 1;*/
+/*color: white;*/
 /*}*/
 
 .inv_heading {
@@ -212,6 +212,7 @@ li {
     background-color: #002D6A;
     border-color: #002D6A;
 }
+
 html {
     font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -236,12 +237,13 @@ html {
 }
 
 .custom-checkbox {
-  min-height: 1rem;
-  padding-left: 0;
-  margin-right: 0;
-  cursor: pointer;
+    min-height: 1rem;
+    padding-left: 0;
+    margin-right: 0;
+    cursor: pointer;
 }
-  .custom-checkbox .custom-control-indicator {
+
+.custom-checkbox .custom-control-indicator {
     content: "";
     display: inline-block;
     position: relative;
@@ -255,30 +257,44 @@ html {
     vertical-align: middle;
     margin: 0 16px;
     box-shadow: none;
-  }
-    .custom-checkbox .custom-control-indicator:after {
-      content: "";
-      position: absolute;
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      background-color: #f1f1f1;
-      border-radius: 21px;
-      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
-      left: -2px;
-      top: -4px;
-      -webkit-transition: left .3s ease, background .3s ease, box-shadow .1s ease;
-      transition: left .3s ease, background .3s ease, box-shadow .1s ease;
-    }
-  .custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
-    background-color: #84c7c1;
+}
+
+.custom-checkbox .custom-control-indicator:after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: #f1f1f1;
+    border-radius: 21px;
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
+    left: -2px;
+    top: -4px;
+    -webkit-transition: left .3s ease, background .3s ease, box-shadow .1s ease;
+    transition: left .3s ease, background .3s ease, box-shadow .1s ease;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
+    background-color: #555555;
     background-image: none;
     box-shadow: none !important;
-  }
-    .custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
-      background-color: #84c7c1;
-      left: 15px;
-    }
-  .custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
+    background-color: #555555;
+    left: 15px;
+}
+
+.custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
     box-shadow: none !important;
-  }
+}
+
+.progress_table {
+    width: 25px;
+    height: 30px;
+    position: relative;
+    float: right;
+}
+.check-icon{
+    font-size: 16px;
+}
